# SG-LEM

./: README.md
CASES/MRB_2D/: README.md  copyPost.sh
CASES/MRB_2D/0/: CO  Ydefault  p
CASES/MRB_2D/0.org/: CO2  Cmean  O2  Zmean  Zvar
CASES/MRB_2D/DRM22/: drm22.xml  speciesThermo
CASES/MRB_2D/constant/: RILEMProperties
CASES/MRB_2D/system/: blockMeshDict  blockMeshDict.m4  blockMeshDict.old  controlDict  fvSchemes  fvSolution  sampleDict  setFieldsDict
CASES/spliceFlameInitZ/: CMakeLists.txt  README.md  input.yaml  makefile  spliceFlame.cpp
CASES/spliceFlameInitZ/BFER/: BFER.xml  speciesThermoDef
CASES/spliceFlameInitZ/BFER/speciesThermo2/: log.txt  species.foam
CASES/spliceFlameInitZ/JL/: speciesThermo
CASES/spliceFlameInitZ/JL/th/: log.txt
CASES/spliceFlameSingle/: animateDZ.gnu
CASES/spliceFlameSingle/MECH/: 2STEP_mech.cti  JL_C3H8.cti  Propane_Angelberger2_for_OF_from_Gokul.cti  Propane_Angelberger2_for_OF_from_Gokul.xml  drm22.cti
CASES/spliceFlameSingle/MECH/BFER/: speciesThermo
cases/MRB_2D/: README.md  allRun
cases/MRB_2D/0/: CO2  Cmean  H2O  T  U  Zmean  alphat
cases/MRB_2D/0.org/: CH4  CO  H2O  N2  T  nut
cases/MRB_2D/DRM22/: drm22.yaml  speciesReaction
cases/MRB_2D/constant/: .RILEMProperties.swp  LESProperties  chemistryProperties  combustionProperties  sampleFaceDict  thermophysicalProperties  turbulenceProperties
cases/MRB_2D/system/: cellSetDict  createPatchDict  decomposeParDict  fvSolution_fromChris  mapFieldsDict  snappyHexMeshDict  topoSetDict
cases/spliceFlameSingle/: CMakeLists.txt  clearCase  image.gnu  input.yaml  plot.gnu  spliceFlame.cpp
cases/spliceFlameSingle/MECH/: grimech30.cti  mixtureZ66-C3H8.xml
cases/spliceFlameSingle/MECH/BFER/: speciesReaction
cases/spliceFlameSingle/MECH/JL/th/: species.foam
cases/spliceFlameSingle/MECH/sk17/: chem.yaml
etc/: sourceRC
trunk/ParMGridGen-1.0/: Makefile.in
trunk/ParMGridGen-1.0/Graphs/: M6.metis.part4-0.1883  M6.metis.part4-1.1891  M6.metis.part4-2.1735  M6.metis.part4-3.1760
trunk/foam9/SGLEMPFoam/: CEqn.H  CvarEqn.H  EEqn.H  HEqn.H  SGLEMPFoam.C  advanceLine.H  boundaryFaces.H  boundaryFlux.H  chemistry.H  computeCsource.H  computeHeatRelease.H  computeNumbers.H  conInit.H  createEnthalpy.H  createFieldRefs.H  createFields2.H  createNumbers.H  createSuperGrid.H  dumpPlane.H  fillLEMlines.H  initCmean.H  initFiles.H  initLEMlines.H  initMatrices.H  initThermo.H  inletSplice.H  integrateScalars.H  internalFaces.H  internalFlux.H  parallelChem.H  parallelSplice.H  sorting.H  splice1.H  splice2.H  spliceFrac.H  wallSuperCells.H  writePlanes.H
trunk/lean-LEM-for-combustion/: CMakeLists.txt  CellData.cpp  CellData.h  LEM.cpp  LEM.h  LEMLine.cpp  LEMLine.h  RILEM.cpp  lemPremixedFlameTest.cpp  oldMakefile  redundant  redundant.h  splicing.cpp  tags
(+62 files in other folders)
